Fix to single booking and multiroom booking tabs on mobile

--- a/src/styles/views/booking-widget.less
+++ b/src/styles/views/booking-widget.less
@@ -25,7 +25,7 @@ booking-widget {
   }
 
   .viewport-mobile &{
-    max-height: auto;
+    max-height: 0 !important;
     transition: none;
     overflow: visible;
   }
